--- a/apartados Nueva version2/Prevenciones.html
+++ b/apartados Nueva version2/Prevenciones.html
@@ -5,66 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardiopatía</title>
     <link rel="stylesheet" href="styleCuraciones.css">
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
+    
 </head>
 <body>
     <div class="flexContainer">
-        <nav class="nav">
-            <ul>
-                <li>
-                    <div class="volver">
-                        <a href="Introduccion.html" class="Volver">
-                            <img class="volverfoto" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/cardiopatia-isquemica.png?raw=true">
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <b>
+            <div class="menu_bar">
+                <a href="#" class="bt-menu"><p>MENU</p></a>
+            </div>
+            <nav>
+                <ul>
+                    <li>
                         <div class="volver">
-                            <a href="Causas.html" class="Volver">
-                                <b>Causes</b>
+                            <a href="Introduccion.html" class="Volver">
+                                <img class="volverfoto" src="https://github.com/SonicJD/TrabajoFarmacia/blob/main/farmacia%20m8/cardiopatia-isquemica.png?raw=true">
                             </a>
                         </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="volver">
-                            <div class="Volver2">
-                                <b>Mesures de prevenció</b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="Causas.html" class="Volver">
+                                    <b>Causes</b>
+                                </a>
                             </div>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="volver">
-                            <a href="TRATAMIENTO.html" class="Volver">
-                                <b>Tratactament</b>
-                            </a>
-                        </div>
-                    </b>
-                </li>                    
-                <li>
-                    <b>
-                        <div class="volver">
-                            <a href="curaciones.html" class="Volver">
-                                <b>Curacions</b>
-                            </a>
-                        </div>
-                    </b>
-                </li>
-                <li>
-                    <b>
-                        <div class="volver">
-                            <a href="GraficoCasos.html" class="Volver">
-                                <b>Grafics de casos</b>
-                            </a>
-                        </div>
-                    </b>
-                </li>
-            </ul>
-        </nav>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <div class="Volver2">
+                                    <b>Mesures de prevenció</b>
+                                </div>
+                            </div>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="TRATAMIENTO.html" class="Volver">
+                                    <b>Tratactament</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>                    
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="curaciones.html" class="Volver">
+                                    <b>Curacions</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>
+                    <li>
+                        <b>
+                            <div class="volver">
+                                <a href="GraficoCasos.html" class="Volver">
+                                    <b>Grafics de casos</b>
+                                </a>
+                            </div>
+                        </b>
+                    </li>
+                </ul>
+            </nav>
+            <script src="patata.js"></script>
         <main>
             <article>
                 <div class="paragrafo">
@@ -276,7 +282,7 @@
                 <ul class="comment">
                     <li>
                         <div class="comentario">
-                            <textarea rows="1" cols="20"></textarea>
+                            <textarea rows="1"></textarea>
                         </div>
                      </li>
                     <li>
